# multi-agent-research-orchestration-framework

./: .env.example  .gitignore  README.md  pyproject.toml
src/daily_research/: __init__.py  __main__.py  cli.py  config.py  discord.py  pdf_export.py  pipeline.py  runner.py  s3.py
src/daily_research/agents/: __init__.py  base.py  extractor.py  planner.py  reporter.py  researcher.py  summarizer.py
src/daily_research/analysis/: __init__.py  trends.py
src/daily_research/arxiv/: __init__.py  chunker.py  client.py  pdf.py
src/daily_research/graph/: __init__.py  models.py  store.py
src/daily_research/vectorstore/: __init__.py  store.py
tasks/: example-sign-language-translation-survey.md
